--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,9 @@
 PORT=5000
 MONGO_URI=mongodb+srv://pratikraj143aj:Pratik%40523110057@cluster0.smdnaop.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET="123456"
 SMTP_EMAIL=buynblast@gmail.com
-SMTP_PASS=wtzs zdty gaqm czbv
+SMTP_PASS=wtzszdtygaqmczbv
 EMAIL_FROM=buynblast@gmail.com
+CLOUDINARY_CLOUD_NAME=dzkprawxw
+CLOUDINARY_API_KEY=427656115879614
+CLOUDINARY_API_SECRET=_iii72RERWYxKGVM9k4aeYQThJY
