--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,12 +14,14 @@
     "@react-three/fiber": "^9.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0"
